# universal-seed-summary

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  tmpclaude-9b0b-cwd
docs/: DEPLOYMENT_LADDER_CANON.md  ORACLE_COMMAND_REFERENCE.md  TOOLS_README.md  api_key_activation.md  cli_contract.md  codebase_overview.md  design-philosophy.md  e2e_generation.md  enterprise_deployment.md  evidence_anchoring.md  faq.md  implementation-guide.md  install.md  live_provider_validation.md  mode-comparison.md  product_definition.md  provider_setup.md  provider_validation_matrix.md  quickstart.md  quickstart_5_min.md  release_freeze_v1.1.1.md  release_notes_v0.3.md  release_notes_v0.4.md  release_notes_v0.5.md  release_notes_v1.0.md  release_notes_v1.1.1.md  release_notes_v1.1.md  release_process.md  repo_blueprint.md  roadmap_v1.2.md  security_hardening.md  v1.2_gh_issue_commands.md  v1.2_github_issue_bodies.md  v1.2_issue_plan.md  v1_mvp_acceptance.md
examples/: archive_valid.md  checkpoint_valid.md  enterprise_openai_run_example.md  gemini_run_example.md  grok_run_example.md  invalid_missing_failure_semantics.md  ollama_local_run_example.md  openai_run_example.md  summary_with_evidence.md  thread_minimal.json  thread_with_secrets.json
landing page/: uss_archive_final.html  uss_protocol.html
protocol/: uss-v1.3.json
protocols/: CPTMP_v1.1_protocol.md  MUSS_v1.0_protocol.xml  PRT-UDFNEXUS_v2.0.0.md  README.md
schemas/: artifact_inspection.schema.json  evidence_map.schema.json  (+4 more)
(+87 files in other folders)
